c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_parse/var_decl_two_struct_kws.c
struct s {
    int a;
};

struct struct s x;  // can't use struct keyword twice in a type specifier

int main(void) {
    return 0;
}